Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML 5</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, et soluta quas similique facere aspernatur? Inventore vel, voluptatem quos incidunt, corrupti reiciendis laboriosam minima consectetur doloremque sunt doloribus provident cum.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem nemo nostrum a eum, porro repellat? Ipsum officiis suscipit quaerat aliquam, sapiente ea totam adipisci expedita possimus natus dolore quisquam perspiciatis?</p>
         </article>
     </main>
 </body>
