--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <header>
-            <h1>Cursos</h1>
+            <h1>Cursos do Gustavo Guanabara</h1>
         </header>
         <article>
             <h2>Curso de HTML 5</h2>
